# routes/api.js
@@ -14,17 +14,20 @@ import {
   assignTicket,
   updateTicketStatus,
   getTicketsByStatus,
-  escalateTicket
+  escalateTicket,
+  getAllTickets
 } from '../controllers/ticketController.js';
 import {
   createUser,
   getUserWithTickets,
   updateUserStatus,
-  getUsersByTicketType
+  getUsersByTicketType,
+  getAllUsers
 } from '../controllers/userController.js';
 import {
   createRating,
-  getAgentRatings
+  getAgentRatings,
+  getAllRatings
 } from '../controllers/ratingController.js';
 
 const router = express.Router();
@@ -44,7 +47,8 @@ router.get('/api/adminLogin', /* #swagger.tags = ['Agents'] */  adminLogin);
 router.post('/api/tickets', /* #swagger.tags = ['Tickets'] */  createTicket);
 router.patch('/api/tickets/:ticketId/assign/:agentId', /* #swagger.tags = ['Tickets'] */  assignTicket);
 router.patch('/api/tickets/:id/status', /* #swagger.tags = ['Tickets'] */  updateTicketStatus);
-router.get('/api/tickets/status/:status', /* #swagger.tags = ['Tickets'] */  getTicketsByStatus);
+router.get('/api/tickets/status/:status', /* #swagger.tags = ['Tickets'] */  getTicketsByStatus); 
+router.get('/api/tickets', /* #swagger.tags = ['Tickets'] */  getAllTickets); 
 router.patch('/api/tickets/:id/escalate', /* #swagger.tags = ['Tickets'] */  escalateTicket);
 
 // User Routes
@@ -52,9 +56,11 @@ router.post('/api/users', /* #swagger.tags = ['Users'] */ createUser);
 router.get('/api/users/:id', /* #swagger.tags = ['Users'] */  getUserWithTickets);
 router.patch('/api/users/:id/status', /* #swagger.tags = ['Users'] */  updateUserStatus);
 router.get('/api/users/type/:ticketType', /* #swagger.tags = ['Users'] */  getUsersByTicketType);
+router.get('/api/users', /* #swagger.tags = ['Users'] */  getAllUsers);
 
 // Rating Routes
 router.post('/api/tickets/:ticketId/ratings', /* #swagger.tags = ['Ratings'] */ createRating);
 router.get('/api/agents/:agentId/ratings', /* #swagger.tags = ['Ratings'] */  getAgentRatings);
+router.get('/api/ratings', /* #swagger.tags = ['Ratings'] */  getAllRatings);
 
 export default router;
